Update project to use subproject as dependencies